src/main/java/com/example/vacancymanagement/core/errors/handling/Eithers.java
package com.example.vacancymanagement.core.errors.handling;

public class Eithers {
    public static <L, R> Either<L, R> left(L value) {
        return new Left<>(value);
    }

    public static <L, R> Either<L, R> right(R value) {
        return new Right<>(value);
    }
}